Update sonar plugin version.